# ai-test-framework

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/aiqa/core/: config.py  metric.py  result.py  runner.py  testcase.py  thresholds.py
src/aiqa/metrics/: deterministic.py
tests/: test_thresholds.py
tests/unit/: doubles.py  test_exact_match.py  test_metric.py  test_runner.py
