[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiqa"
version = "0.1.0"
description = "A from-scratch, production-grade AI/LLM testing & evaluation framework."
requires-python = ">=3.11"
dependencies = ["pydantic>=2.5"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/aiqa"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/aiqa"]
branch = true